// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSection component renders correctly 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-module_Form__Fe-5R Form Form-module_Form--rightAlignButton__P18S5"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root MuiTextField-root TextField-module_TextField__zD7pc MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                  data-shrink="false"
                >
                  Text
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    name="text"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-3"
                    >
                      <span>
                        Text
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root MuiTextField-root TextField-module_TextField__zD7pc MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                  data-shrink="false"
                >
                  Textarea
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
                >
                  <textarea
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                    name="textarea"
                    rows="6"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-3"
                    >
                      <span>
                        Textarea
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root MuiTextField-root TextField-module_TextField__zD7pc MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                  data-shrink="false"
                >
                  Email
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    name="email"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-3"
                    >
                      <span>
                        Email
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Checkbox-module_Checkbox__zn5Y8"
              >
                <label
                  class="MuiFormControlLabel-root"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-8"
                        data-indeterminate="false"
                        name="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    Checkbox
                  </span>
                </label>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div>
                <p
                  class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                  style="padding-bottom: 15px;"
                >
                  Radio
                </p>
                <div
                  class="RadioGroup-module_RadioGroup__v57CZ"
                >
                  <div
                    class="RadioGroup-module_container__e6YSI"
                  >
                    <div
                      class="RadioButton-module_RadioButton__l7GOG RadioGroup-module_item__aB-tj"
                    >
                      <input
                        class="RadioButton-module_input__xnTZu"
                        id="radio-radio-Option1"
                        name="radio"
                        type="radio"
                        value="Option1"
                      />
                      <label
                        class="RadioButton-module_label__uUjxg"
                        for="radio-radio-Option1"
                      >
                        <div
                          aria-disabled="false"
                          class="MuiButtonBase-root RadioButton-module_text__dvrjI"
                          role="button"
                          tabindex="-1"
                        >
                          Option1
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </div>
                      </label>
                    </div>
                    <div
                      class="RadioButton-module_RadioButton__l7GOG RadioGroup-module_item__aB-tj"
                    >
                      <input
                        class="RadioButton-module_input__xnTZu"
                        id="radio-radio-Option2"
                        name="radio"
                        type="radio"
                        value="Option2"
                      />
                      <label
                        class="RadioButton-module_label__uUjxg"
                        for="radio-radio-Option2"
                      >
                        <div
                          aria-disabled="false"
                          class="MuiButtonBase-root RadioButton-module_text__dvrjI"
                          role="button"
                          tabindex="-1"
                        >
                          Option2
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </div>
                      </label>
                    </div>
                    <div
                      class="RadioButton-module_RadioButton__l7GOG RadioGroup-module_item__aB-tj"
                    >
                      <input
                        class="RadioButton-module_input__xnTZu"
                        id="radio-radio-Option3"
                        name="radio"
                        type="radio"
                        value="Option3"
                      />
                      <label
                        class="RadioButton-module_label__uUjxg"
                        for="radio-radio-Option3"
                      >
                        <div
                          aria-disabled="false"
                          class="MuiButtonBase-root RadioButton-module_text__dvrjI"
                          role="button"
                          tabindex="-1"
                        >
                          Option3
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </div>
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                  data-shrink="false"
                >
                  Select
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root Select-module_Select__lMyOh MuiInputBase-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="mui-component-select-select"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                    id="mui-component-select-select"
                    role="button"
                    tabindex="0"
                  >
                    <span>
                      ​
                    </span>
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    name="select"
                    tabindex="-1"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-3"
                    >
                      <span>
                        Select
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12"
            >
              <div
                class="MuiFormControl-root Upload-module_Upload__hhDut MuiFormControl-fullWidth"
              >
                <div>
                  <label
                    for="upload"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-9 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                          />
                        </svg>
                        Upload
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                  <input
                    accept=".pdf, .jpg, .jpeg, .png"
                    class="Upload-module_input__vu7Um"
                    data-testid="upload"
                    id="upload"
                    multiple=""
                    type="file"
                  />
                  <p
                    class="MuiTypography-root Upload-module_mobile-instructions__SSpaS Typography-module_Typography__aA2Zb MuiTypography-body1"
                  >
                    MC: form.upload.supportedFormats: .pdf, .jpg, .jpeg, .png. MC: form.upload.maxSize: 5.2MB
                  </p>
                </div>
                <div />
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <p
                class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
              >
                <span>
                  Hubspot text
                </span>
              </p>
              <div
                class="MuiInputBase-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input"
                  name="hubspot-text"
                  type="hidden"
                  value="Hubspot text"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiInputBase-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input"
                  name="hubspot-hidden"
                  type="hidden"
                  value="Hubspot hidden"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Checkbox-module_Checkbox__zn5Y8"
              >
                <label
                  class="MuiFormControlLabel-root"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-8"
                        data-indeterminate="false"
                        name="hubspot-checkbox"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span>
                      Hubspot checkbox
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Checkbox-module_Checkbox__zn5Y8"
              >
                <label
                  class="MuiFormControlLabel-root"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-8"
                        data-indeterminate="false"
                        name="hubspot-checkbox"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    <span>
                      Hubspot checkbox
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="Form-module_ButtonWrapper__LUerd"
          >
            <button
              aria-action="Test form"
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-9 MuiButton-contained buttonStyles-contained-11 Form-module_Button__nfWj5 MuiButton-containedPrimary"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label buttonStyles-label-12"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test convertMarkdownLinksToAnchorLinks function with link in label 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-module_Form__Fe-5R Form Form-module_Form--rightAlignButton__P18S5"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Checkbox-module_Checkbox__zn5Y8"
              >
                <label
                  class="MuiFormControlLabel-root"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-289 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-292"
                        data-indeterminate="false"
                        name="checkbox-wih-link"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    I agree with BMI's 
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
                      href="https://google.co.uk"
                      rel="noopener"
                      target="_blank"
                    >
                      <span>
                        Data Protection Policy
                      </span>
                    </a>
                    
                  </span>
                </label>
              </div>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Checkbox-module_Checkbox__zn5Y8"
              >
                <label
                  class="MuiFormControlLabel-root"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-289 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-292"
                        data-indeterminate="false"
                        name="checkbox-wih-link"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  >
                    I agree with BMI's 
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
                      href="http://localhost/co.uk"
                      target="_blank"
                    >
                      <span>
                        Data Protection Policy
                      </span>
                    </a>
                    
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="Form-module_ButtonWrapper__LUerd"
          >
            <button
              aria-action="Test form"
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-293 MuiButton-contained buttonStyles-contained-295 Form-module_Button__nfWj5 MuiButton-containedPrimary"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label buttonStyles-label-296"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test convertMarkdownLinksToAnchorLinks function with no label 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-module_Form__Fe-5R Form Form-module_Form--rightAlignButton__P18S5"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Checkbox-module_Checkbox__zn5Y8"
              >
                <label
                  class="MuiFormControlLabel-root"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-265 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-268"
                        data-indeterminate="false"
                        name="checkbox-null-label"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                  />
                </label>
              </div>
            </div>
          </div>
          <div
            class="Form-module_ButtonWrapper__LUerd"
          >
            <button
              aria-action="Test form"
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-269 MuiButton-contained buttonStyles-contained-271 Form-module_Button__nfWj5 MuiButton-containedPrimary"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label buttonStyles-label-272"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test handleEmailValidation with correct email 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-module_Form__Fe-5R Form Form-module_Form--rightAlignButton__P18S5"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root MuiTextField-root TextField-module_TextField__zD7pc MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                  data-shrink="true"
                >
                  Email
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    name="email"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-81 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-83 PrivateNotchedOutline-legendNotched-84"
                    >
                      <span>
                        Email
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Form-module_ButtonWrapper__LUerd"
          >
            <button
              aria-action="Test form"
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-85 MuiButton-contained buttonStyles-contained-87 Form-module_Button__nfWj5 MuiButton-containedPrimary"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label buttonStyles-label-88"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test handleEmailValidation with incorrect email 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-module_Form__Fe-5R Form Form-module_Form--rightAlignButton__P18S5"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12"
            >
              <div
                class="MuiFormControl-root MuiTextField-root TextField-module_TextField__zD7pc TextField-module_TextField--error__NKZhZ MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error MuiFormLabel-filled"
                  data-shrink="true"
                >
                  Email
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <input
                    aria-invalid="true"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    name="email"
                    type="text"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root TextField-module_Error__WtlkS"
                      focusable="false"
                      style="color: red;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 11c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
                      />
                    </svg>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-57 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-59 PrivateNotchedOutline-legendNotched-60"
                    >
                      <span>
                        Email
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled"
                >
                  MC: errors.emailInvalid
                </p>
              </div>
            </div>
          </div>
          <div
            class="Form-module_ButtonWrapper__LUerd"
          >
            <button
              aria-action="Test form"
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-61 MuiButton-contained buttonStyles-contained-63 Form-module_Button__nfWj5 MuiButton-containedPrimary Mui-disabled Mui-disabled"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              <span
                class="MuiButton-label buttonStyles-label-64"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test upload input with large file 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-module_Form__Fe-5R Form Form-module_Form--rightAlignButton__P18S5"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Upload-module_Upload__hhDut MuiFormControl-fullWidth"
              >
                <div>
                  <label
                    for="upload"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-105 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-108"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                          />
                        </svg>
                        Upload
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                  <input
                    accept=".pdf, .jpg, .jpeg, .png"
                    class="Upload-module_input__vu7Um"
                    data-testid="upload"
                    id="upload"
                    multiple=""
                    type="file"
                  />
                  <p
                    class="MuiTypography-root Upload-module_mobile-instructions__SSpaS Typography-module_Typography__aA2Zb MuiTypography-body1"
                  >
                    MC: form.upload.supportedFormats: .pdf, .jpg, .jpeg, .png. MC: form.upload.maxSize: 1MB
                  </p>
                </div>
                <div>
                  <div
                    class="Upload-module_file__jhIhX"
                    data-testid="test-file"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root Upload-module_file-display__Naleh"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
                      />
                    </svg>
                    <div
                      class="Upload-module_file-info-wrapper__roVHV"
                    >
                      <p
                        class="MuiTypography-root Upload-module_filename__5NX6j Typography-module_Typography__aA2Zb MuiTypography-body1"
                      >
                        fileName
                      </p>
                      <p
                        class="MuiTypography-root Upload-module_error__WM-L8 Typography-module_Typography__aA2Zb MuiTypography-body1"
                      >
                        MC: errors.maxSize
                      </p>
                    </div>
                    <button
                      aria-label="Remove file"
                      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-116 iconButtonStyles-medium-122 iconButtonStyles-text-118 Upload-module_delete-icon__G5xt4"
                      data-testid="file-delete"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Form-module_ButtonWrapper__LUerd"
          >
            <button
              aria-action="Test form"
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-105 MuiButton-contained buttonStyles-contained-107 Form-module_Button__nfWj5 MuiButton-containedPrimary"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label buttonStyles-label-108"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test upload input with no maxSize 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-module_Form__Fe-5R Form Form-module_Form--rightAlignButton__P18S5"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Upload-module_Upload__hhDut MuiFormControl-fullWidth"
              >
                <div>
                  <label
                    for="upload"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-145 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-148"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                          />
                        </svg>
                        Upload
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                  <input
                    accept=".pdf, .jpg, .jpeg, .png"
                    class="Upload-module_input__vu7Um"
                    data-testid="upload"
                    id="upload"
                    multiple=""
                    type="file"
                  />
                  <p
                    class="MuiTypography-root Upload-module_mobile-instructions__SSpaS Typography-module_Typography__aA2Zb MuiTypography-body1"
                  >
                    MC: form.upload.supportedFormats: .pdf, .jpg, .jpeg, .png. MC: form.upload.maxSize: 1MB
                  </p>
                </div>
                <div />
              </div>
            </div>
          </div>
          <div
            class="Form-module_ButtonWrapper__LUerd"
          >
            <button
              aria-action="Test form"
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-145 MuiButton-contained buttonStyles-contained-147 Form-module_Button__nfWj5 MuiButton-containedPrimary"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label buttonStyles-label-148"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormSection component test upload input with small file 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <form
          class="Form-module_Form__Fe-5R Form Form-module_Form--rightAlignButton__P18S5"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
            >
              <div
                class="MuiFormControl-root Upload-module_Upload__hhDut MuiFormControl-fullWidth"
              >
                <div>
                  <label
                    for="upload"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-125 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-128"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                          />
                        </svg>
                        Upload
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                  <input
                    accept=".pdf, .jpg, .jpeg, .png"
                    class="Upload-module_input__vu7Um"
                    data-testid="upload"
                    id="upload"
                    multiple=""
                    type="file"
                  />
                  <p
                    class="MuiTypography-root Upload-module_mobile-instructions__SSpaS Typography-module_Typography__aA2Zb MuiTypography-body1"
                  >
                    MC: form.upload.supportedFormats: .pdf, .jpg, .jpeg, .png. MC: form.upload.maxSize: 1MB
                  </p>
                </div>
                <div>
                  <div
                    class="Upload-module_file__jhIhX"
                    data-testid="test-file"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root Upload-module_file-display__Naleh"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
                      />
                    </svg>
                    <div
                      class="Upload-module_file-info-wrapper__roVHV"
                    >
                      <p
                        class="MuiTypography-root Upload-module_filename__5NX6j Typography-module_Typography__aA2Zb MuiTypography-body1"
                      >
                        fileName
                      </p>
                      <p
                        class="MuiTypography-root Upload-module_file-size__YJCwW Typography-module_Typography__aA2Zb MuiTypography-body1"
                      >
                        0KB
                      </p>
                    </div>
                    <button
                      aria-label="Remove file"
                      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-136 iconButtonStyles-medium-142 iconButtonStyles-text-138 Upload-module_delete-icon__G5xt4"
                      data-testid="file-delete"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Form-module_ButtonWrapper__LUerd"
          >
            <button
              aria-action="Test form"
              aria-label="children"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-125 MuiButton-contained buttonStyles-contained-127 Form-module_Button__nfWj5 MuiButton-containedPrimary"
              data-gtm="{\\"id\\":\\"form-button1\\",\\"label\\":\\"children\\",\\"action\\":\\"Test form\\"}"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label buttonStyles-label-128"
              >
                Submit
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <p
          class="MuiTypography-root RecaptchaPrivacyLinks Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hubspot FormSection component renders correctly 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="Form--hubSpot"
          id="bmi-hubspot-form-no-id"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Hubspot FormSection component test submit when preview is on 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--white__C7uPc"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="Form--hubSpot"
          id="bmi-hubspot-form-no-id"
        />
      </div>
    </div>
  </div>
</div>
`;
